--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,7 @@
 = songkick
 
-Description goes here.
-
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+Ruby wrapper for songkick gem
+learn more about songkick API at http://www.songkick.com/developer
 
 == Copyright
 
